working on collision

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ include_directories(${PROJECT_SOURCE_DIR}/include)
 include_directories(${PROJECT_SOURCE_DIR}/assets)
 LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/lib/x64)
 
-add_executable(SDL_Astro main.cpp game.cpp game.h textureManager.cpp textureManager.h player.cpp player.h enemy.cpp enemy.h)
+add_executable(SDL_Astro main.cpp game.cpp game.h textureManager.cpp textureManager.h player.cpp player.h enemy.cpp enemy.h Check_collision.cpp Check_collision.h)
 
 target_link_libraries(${PROJECT_NAME}
         SDL2main
