Fix up event handling on Linux.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,26 +3,19 @@ project(SDL_Astro)
 
 set(CMAKE_CXX_STANDARD 14)
 
-
 include_directories(${PROJECT_SOURCE_DIR}/include)
-if (WIN32)
-    link_directories(${PROJECT_SOURCE_DIR}/lib/x64)
-endif ()
+if(WIN32)
+  link_directories(${PROJECT_SOURCE_DIR}/lib/x64)
+endif()
 add_executable(
-        SDL_Astro
-        src/main.cpp
-        src/game.cpp
-        src/textureManager.cpp
-        src/player.cpp
-        src/enemy.cpp
-        src/projectiles.cpp
-        src/Check_collision.cpp
-        src/scoreManager.cpp include/Astro/scoreManager.h)
+  SDL_Astro
+  src/main.cpp
+  src/game.cpp
+  src/textureManager.cpp
+  src/player.cpp
+  src/enemy.cpp
+  src/projectiles.cpp
+  src/Check_collision.cpp
+  src/scoreManager.cpp)
 
-target_link_libraries(
-  ${PROJECT_NAME}
-  SDL2main
-  SDL2
-        SDL2_image
-        SDL2_ttf.dll
-)
+target_link_libraries(${PROJECT_NAME} SDL2main SDL2 SDL2_image SDL2_ttf)
