Convert rand() to C++ <random>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,7 @@ add_executable(
   src/enemy.cpp
   src/projectiles.cpp
   src/Check_collision.cpp
-  src/scoreManager.cpp)
+  src/scoreManager.cpp
+  src/randomness.cpp)
 
 target_link_libraries(${PROJECT_NAME} SDL2main SDL2 SDL2_image SDL2_ttf)
